k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres

    spec:

      volumes:
        - name: postgres-storage-3
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim-3

      containers:
        - name: postgres
          image: postgres:9.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-3
              mountPath: /var/lib/postgresql/data
              subPath: postgres
