k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: vote
  template:
    metadata:
      labels:
        component: vote
    spec:
      containers:
        - name: vote
          image: docker/example-voting-app-vote
          ports:
            - containerPort: 80
