k8s/result-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: ClusterIP
  selector:
    component: result
  ports:
    - port: 5001
      targetPort: 80
