k8s/vote-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: ClusterIP
  selector:
    component: vote
  ports:
    - port: 5000
      targetPort: 80
